Introducing the News Activity layout and other majors changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DetailsActivity"
+            android:name=".NewsActivity"
             android:exported="false" />
         <activity
             android:name=".FavoriteActivity"
