--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Reading The News On Android TV"
         android:supportsRtl="true"
         android:theme="@style/Theme.ReadingTheNewsOnAndroidTV">
         <activity
